# ccny_camera_drivers

./: .gitignore
ccny_mvVirtualDevice/: Makefile  mvBlueFOX-x86_ABI2-2.5.10.tgz.md5sum
ccny_opencv_cam/: CMakeLists.txt  package.xml
mv_bluefox_camera/: CMakeLists.txt  package.xml
mv_bluefox_driver/: CMakeLists.txt  package.xml
mv_bluefox_driver/include/DriverBase/Include/: mvDriverBaseEnums.h  mvVersionInfo.h
mv_bluefox_driver/include/mvIMPACT_CPP/: mvIMPACT_acquire.h  mvIMPACT_acquire_GenICam.h  versionInfo.txt
mv_bluefox_driver/include/mv_bluefox_driver/: camera.h
mv_bluefox_driver/lib/x86/: libmvDeviceManager.so.2.6.1  libmvPropHandling.so.2.6.1  libusb-1.0.so.0.0.0
mv_bluefox_driver/lib/x86_64/: libmvDeviceManager.so.2.6.1  libmvPropHandling.so.2.6.1
mv_bluefox_driver/src/: camera.cpp  mv_bluefox_node.cpp
pgr_camera_driver/: CMakeLists.txt  package.xml
pgr_camera_driver/cfg/: PGRCamera.cfg
