<?xml version="1.0"?>
<package>
  <name>ccny_opencv_cam</name>
  <version>0.0.1</version>
  <description>The ccny_opencv_cam package</description>

  <maintainer email="muhrix@gmail.com">Murilo F. M.</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ccny_opencv_cam</url>

  <author >Carlos Jaramillo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
