<?xml version="1.0"?>
<package>
  <name>mv_bluefox_camera</name>
  <version>0.0.1</version>
  <description>The mv_bluefox_camera package</description>

  <maintainer email="muhrix@gmail.com">Murilo F. M.</maintainer>
  <license>GPL, BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mv_bluefox_driver</run_depend>
  <run_depend>ccny_opencv_cam</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
