<?xml version="1.0"?>
<package>
  <name>mv_bluefox_driver</name>
  <version>0.0.1</version>
  <description>The mv_bluefox_driver package for MatrixVision Bluefox Cameras (wrapping mvIMPACT 	Acquire API)</description>

  <maintainer email="muhrix@gmail.com">Murilo F. M.</maintainer>

  <license>GPL</license>

  <author>Carlos Jaramillo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>

  <export>
    <nodelet plugin="${prefix}/mv_bluefox_nodelet.xml"/>
  </export>
</package>
